--- a/env.example
+++ b/env.example
@@ -2,10 +2,10 @@
 # Copy this file to .env.local and fill in your actual values
 
 # App Configuration
-NEXT_PUBLIC_APP_NAME="Sarah & Michael's Wedding"
+NEXT_PUBLIC_APP_NAME="Sakshi & Lakshay's Wedding"
 NEXT_PUBLIC_APP_URL=https://your-domain.com
-NEXT_PUBLIC_WEDDING_DATE=2024-06-15
-NEXT_PUBLIC_COUPLE_NAMES="Sarah & Michael"
+NEXT_PUBLIC_WEDDING_DATE=2025-11-12
+NEXT_PUBLIC_COUPLE_NAMES="Sakshi & Lakshay"
 
 # Firebase Configuration (Production)
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
@@ -65,3 +65,8 @@ NEXT_PUBLIC_ADMIN_PANEL_ENABLED=true
 NEXT_PUBLIC_GUESTBOOK_ENABLED=true
 NEXT_PUBLIC_RSVP_ENABLED=true
 NEXT_PUBLIC_NOTIFICATIONS_ENABLED=true
+
+# Interactive Features
+NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=pk.your_mapbox_public_token_here
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
