--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-email/render": "^1.3.1",
+    "@types/mapbox-gl": "^3.4.1",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -82,6 +84,7 @@
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.544.0",
+    "mapbox-gl": "^3.15.0",
     "next": "15.5.4",
     "next-csrf": "^0.2.1",
     "next-pwa": "^5.6.0",
@@ -89,9 +92,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-map-gl": "^8.0.4",
     "resend": "^6.1.0",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
+    "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
     "workbox-webpack-plugin": "^7.3.0",
