--- a/env.example
+++ b/env.example
@@ -68,5 +68,7 @@ NEXT_PUBLIC_NOTIFICATIONS_ENABLED=true
 
 # Interactive Features
 NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=pk.your_mapbox_public_token_here
-SPOTIFY_CLIENT_ID=your_spotify_client_id
+
+# Spotify Integration (for real song previews)
+NEXT_PUBLIC_SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
