--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
@@ -111,6 +112,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.17",
